=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.98

   * performance increase for atom selections

   * updated output generated by PyMOL when loading various files...

   * rank as the final arbiter of atom sorts (if everything else matches)

   * handling of PDB files with mismatched SCALE and CRYST

   * special handling for CCP4 maps with missing symmetry blocks

   * long-term code changes: elimination of global state from PyMOL and
     allow for option of separating PyMOL graphics from Python top level

   * support for residue names and identifiers in mol2 files

   * dynamic grid for slice module

   * rank attribute for atoms ( = rank/row from input file)

   * additional safety margins around glReadPixels...

   * cmd.get_color_index

   * passive motion outside of window kills passive menus...

   * faster coulomb_local + menu changes

   * fixed bug with object/selection renaming

   * fixed bug with sequence viewer segment/chain display & spacing

   * slices + associated settings.

   * fixed bug with symexp for when template atoms are outside the
     target cell...

Changes up to 0.97

   * install plugin menu item

   * fixed sequence viewer bug -- GLU now shown as 'E' not 'D'!

   * included Remote PDB loader and APBS plugin

Changes up to 0.96

   * more VDW parameters & updated bond info for DNA/RNA

   * fixed a colossal memory leak in the champ module.

   * aromatic bond display

   * mol2 and multi-mol2 reading capability

   -- beta 16
   * added experimental ability to calculate vacuum electrostatic 
     potentials

   * fixed bugs with map_double, map_new, and color ramping

   -- beta 15

   * annotation wizard (e.g. for SD files -- experimental)

   -- beta 14

   * additional support for weird concatenated PDB files such as those
     output by MOE

   * fixed problem with rendering of discontinuous surfaces