@@ -4,6 +4,12 @@ CHANGE LOG
 
 Changes up to 0.98
 
+   * ray_direct_shade setting 
+
+   * adjusted povray camera and light settings
+
+   * povray export now supports mesh2 -- no more need for MegaPOV.
+
    * performance increase for atom selections
 
    * updated output generated by PyMOL when loading various files...
